--- a/package.json
+++ b/package.json
@@ -1,16 +1,70 @@
 {
-  "name": "webrtc-server",
-  "version": "0.0.1",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+  "name": "adawarp",
+  "version": "0.0.1-alpha3",
+  "description": "Core System for Teleporting",
+  "repository": {
+    "url": "https://bitbucket.org/adavr/warp",
+    "type": "git"
   },
-  "author": "Kentaro Teramoto",
-  "license": "MIT",
+  "author": {
+    "name": "Kentaro Teramoto",
+    "email": "hrlclb@gmail.com",
+    "url": "horol.org"
+  },
+  "keywords": [
+    "web",
+    "webrtc",
+    "teleport",
+    "warp"
+  ],
   "dependencies": {
-    "express": "^4.13.4",
-    "socket.io": "^1.4.5"
-  }
+    "@types/axios": "^0.9.33",
+    "@types/debug": "0.0.29",
+    "@types/node": "^6.0.45",
+    "@types/socket.io-client": "^1.4.27",
+    "@types/webrtc": "0.0.20",
+    "ajv": "4.1.7",
+    "axios": "0.13.1",
+    "bootstrap": "4.0.0-alpha.2",
+    "debug": "2.2.0",
+    "log4js": "0.6.37",
+    "morgan": "1.7.0",
+    "rxjs": "5.0.0-rc.1",
+    "socket.io": "1.4.8",
+    "socket.io-client": "1.4.8"
+  },
+  "devDependencies": {
+    "@types/mocha": "^2.2.32",
+    "css-loader": "0.23.1",
+    "eslint": "2.9.0",
+    "express": "^4.14.0",
+    "file-loader": "0.8.5",
+    "flightplan": "0.6.14",
+    "json-loader": "0.5.4",
+    "mocha": "^3.1.2",
+    "node-dev": "^3.1.3",
+    "power-assert": "^1.4.1",
+    "scss-loader": "0.0.1",
+    "style-loader": "0.13.1",
+    "ts-loader": "0.8.2",
+    "tslint": "^3.15.1",
+    "tslint-loader": "^2.1.5",
+    "typedoc": "^0.5.0",
+    "typescript": "2.1.0-dev.20161028",
+    "url-loader": "0.5.7",
+    "webpack": "1.13.0"
+  },
+  "scripts": {
+    "start": "node examples/server/app",
+    "server/dev": "node-dev examples/server/app",
+    "build": "webpack --config ./webpack.config.js --color --progress",
+    "watch": "webpack --config ./webpack.config.js --watch --color --progress",
+    "release-build": "NODE_ENV=production webpack --config ./webpack.config.js --optimize-occurence-order --optimize-dedupe --optimize-minimize",
+    "clean": "rm -rf npm-debug* dist/",
+    "lint": "tslint -c ./tslint.json ./src/**/*.ts ./src/*.ts ",
+    "test/watch": "mocha -w dist/test.js",
+    "test": "mocha dist/test.js",
+    "prepublish": "npm run clean && npm run release-build"
+  },
+  "main": "app/main.js"
 }
