--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
       "noImplicitAny": false,
       "sourceMap": false,
       "jsx": "react",
-      "target": "ES2015",
+      "target": "es5",
       "traceResolution": true,
       "lib": [
         "es2016",
