--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "adawarp",
-  "version": "0.0.1-alpha4",
+  "version": "0.0.1-alpha5",
   "description": "Core System for Teleporting",
   "repository": {
     "url": "https://bitbucket.org/adavr/warp",
@@ -21,6 +21,7 @@
     "@types/axios": "^0.9.33",
     "@types/debug": "0.0.29",
     "@types/node": "^6.0.45",
+    "@types/power-assert": "^1.4.29",
     "@types/socket.io-client": "^1.4.27",
     "@types/webrtc": "0.0.20",
     "ajv": "4.1.7",
@@ -50,7 +51,7 @@
     "tslint": "^3.15.1",
     "tslint-loader": "^2.1.5",
     "typedoc": "^0.5.0",
-    "typescript": "2.1.0-dev.20161028",
+    "typescript": "2.1.1",
     "uglify-js": "2.7.4",
     "url-loader": "0.5.7",
     "webpack": "1.13.0"
@@ -61,7 +62,7 @@
     "build": "webpack --config ./webpack.config.js --color --progress",
     "watch": "webpack --config ./webpack.config.js --watch --color --progress",
     "release-build": "NODE_ENV=production webpack --config ./webpack.config.js --optimize-occurence-order --optimize-dedupe && npm run uglify",
-    "uglify": "uglifyjs dist/adawarp.js --compress --mangle  --output dist/adawarp.min.js --screw-ie8", 
+    "uglify": "uglifyjs dist/adawarp.js --compress --mangle  --output dist/adawarp.min.js --screw-ie8",
     "clean": "rm -rf npm-debug* dist/",
     "lint": "tslint -c ./tslint.json ./src/**/*.ts ./src/*.ts ",
     "test/watch": "mocha -w dist/test.js",
